--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 # PORT
-PORT=3000
+PORT=8000
 
 # DATABASE
-DB_HOST=localhost
+MONGO_CONNECT_URL=
+DB_HOST=mongodb
+DB_USER=root
+DB_PASSWORD=pass12345
 DB_PORT=27017
 DB_DATABASE=dev
+
 
 # TOKEN
 SECRET_KEY=secretKey
