--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Docker
+db
+
 # Logs
 logs
 *.log
@@ -74,10 +77,6 @@ web_modules/
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
